--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.css">
   <link rel="stylesheet" type="text/css" href="style.css">
   <title>Beer Review</title>
 </head>
+
 <body>
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
@@ -12,31 +14,43 @@
         <h1>Beer Review</h1>
       </div>
 
+        <button class="btn btn-success sort-beer" type="button">Sort Beers By Rating</button>
       <section class="beers">
         <h2>Beers</h2>
-        <ul class="beers-list"></ul>
+        <ul class="beers-list list-group">
+
+        </ul>
       </section>
 
       <form class="beer-form">
         <h3>Add a New Beer</h3>
 
         <div class="form-group">
-          <input type="text"
-            class="beer-input form-control"
-            placeholder="Beer Name">
+          <input type="text" class="beer-input form-control" placeholder="Beer Name">
         </div>
-        
+
         <div class="form-group">
-          <input type="text"
-            class="category-input form-control"
-            placeholder="Category">
+          <input type="text" class="category-input form-control" placeholder="Category">
         </div>
-        
+
         <button class="btn btn-primary post-beer" type="button">Post</button>
+        <select class="beer-rating">
+          <option>Rate Beer</option>
+          <option value="5">5</option>
+          <option value="4">4</option>
+          <option value="3">3</option>
+          <option value="2">2</option>
+          <option value="1">1</option>
+        </select>
+        <br>
+
+
       </form>
+      <img src="http://pngimg.com/uploads/beer/beer_PNG2371.png" alt="beerzz" class="img-responsive center-block">
     </div>
   </div>
   <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
   <script src="script.js"></script>
 </body>
+
 </html>
